--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
     tools:context=".MainActivity">
 
     <com.gioppl.humiditysliderview.SlideView
+        android:id="@+id/sv_main"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="50dp"
         android:layout_width="match_parent"
